# pie

backend/backend-python/: pyproject.toml  test.py
backend/backend-python/src/flashinfer_metal/: README.md  mps_append_kv_cache.py  mps_attention.py  mps_rope.py  mps_shader_compiler.py  mps_shader_integration.py  ops.py
backend/backend-python/src/pie_backend/: adapter.py  ir.py  runtime.py  service.py  utils.py
backend/backend-python/src/pie_backend/model/: __init__.py  llama3.py  llama3_tp.py  qwen2.py  qwen3.py
backend/backend-python/src/pie_model_service/: __main__.py  config.py  handler.py  server.py  service.py
backend/backend-python/src/pie_model_service/model/: __init__.py  gptoss_utils.py  llama3.py  qwen2.py  qwen3.py
backend/backend-python/src/pie_model_service/model_old/: __init__.py  llama3.py
